WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39872
Web Inspector: assertion failure in WebNodeHighlighter::dealloc on Mac
https://bugs.webkit.org/show_bug.cgi?id=39872
Summary
Web Inspector: assertion failure in WebNodeHighlighter::dealloc on Mac
Yury Semikhatsky
Reported
2010-05-28 05:14:26 PDT
Steps to reproduce: 1. Open Web Inspector 2. Open Elements panel and select an element so that it's highligted in the inspected page 3. Quit browser Result: ASSERTION FAILED: !_currentHighlight (/Users/yurys/WebKitGit/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:526 void -[WebNodeHighlighter dealloc](WebNodeHighlighter*, objc_selector*))
Attachments
Patch
(1.48 KB, patch)
2010-05-28 06:40 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2010-05-28 06:40:02 PDT
Created
attachment 57323
[details]
Patch
Yury Semikhatsky
Comment 2
2010-05-28 07:07:54 PDT
Comment on
attachment 57323
[details]
Patch Clearing flags on attachment: 57323 Committed
r60354
: <
http://trac.webkit.org/changeset/60354
>
Yury Semikhatsky
Comment 3
2010-05-28 07:08:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug