2010-05-28  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: hide node highlight when inspected page closes.
        https://bugs.webkit.org/show_bug.cgi?id=39872

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::~InspectorController):
        (WebCore::InspectorController::inspectedPageDestroyed):

Canonical link: https://commits.webkit.org/51397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60354 268f45cc-cd09-0410-ab3c-d52691b4dbfc